v1.10 XW 26-07-2019
improved: code
removed: AI

v1.9 XW 25-07-2019
changed: to microkernel

v1.8 XW 23-07-2019
added: lance driver (issue #13)
added: ide controller

v1.7 XW 20-07-2019
fixed: bootrc (issue #7)

v1.6 XW 19-07-2019
fixed: PCI and Thread (issue #9)

v1.5 XW 18-07-2019
added: HashMap, fs

v1.4 XW 13-07-2019
added: license file

v1.3 XW 12-07-2019
added: jdk
removed: compiler

v1.2 XW 09-07-2019
improved

v1.1 XW 08-07-2019
added: AI

v1.0 XW 07-07-2019
intial version