@@ -63,10 +63,10 @@ public interface Function<T, R> {
      *
      * @see #andThen(Function)
      */
-    /*default <V> Function<V, R> compose(Function<? super V, ? extends T> before) {
+    default <V> Function<V, R> compose(Function<? super V, ? extends T> before) {
         Objects.requireNonNull(before);
         return (V v) -> apply(before.apply(v));
-    }*/
+    }
 
     /**
      * Returns a composed function that first applies this function to
@@ -83,10 +83,10 @@ public interface Function<T, R> {
      *
      * @see #compose(Function)
      */
-    /*default <V> Function<T, V> andThen(Function<? super R, ? extends V> after) {
+    default <V> Function<T, V> andThen(Function<? super R, ? extends V> after) {
         Objects.requireNonNull(after);
         return (T t) -> after.apply(apply(t));
-    }*/
+    }
 
     /**
      * Returns a function that always returns its input argument.
