@@ -1,6 +1,7 @@
 v1.10 XW 26-07-2019
 improved: code
 removed: AI
+fixed: default in interface
 
 v1.9 XW 25-07-2019
 changed: to microkernel
